made header fixed to sty visible when scrolling. Still trying to add nav mneu to adrop down in mobile view but failing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,22 @@
 header {
+    position: fixed;
     font-family: Arial, sans-serif;
     background-color: rgb(40, 40, 40);
     color: whitesmoke;
     width: 100%;
     text-align: center;
 
+
 }
 
-header nav {
-    display: none;
-}
 
 h1,
 h2 {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-size: 180%;}
+    font-size: 180%;
+}
 
 
 h3 {
@@ -54,51 +54,51 @@ ul li {
 }
 
 body {
-        margin: 0;
-        padding: 0em;
+    margin: 0;
+    padding: 0em;
+}
+
+main {
+    background: url(../images/hero\ image\ boxing.jpg) no-repeat center / cover;
+    height: 500px;
+    width: 100%;
+    margin: 0rem;
+    padding: 0rem;
+}
+
+#about {
+    background-color: rgb(40, 40, 40);
+    color: whitesmoke;
+    padding-bottom: 20px;
+}
+
+#classes {
+    background-color: black;
+    color: whitesmoke;
+    padding: 0 0;
+
+}
+
+footer {
+    font-family: Arial, sans-serif;
+    background-color: rgb(40, 40, 40);
+    color: whitesmoke;
+    width: 100%;
+    height: 100px;
+
+}
+
+footer nav {
+
+    color: whitesmoke;
+    text-decoration: none;
+    text-align: center;
+    font-size: 150%;
+}
+
+@media screen and (min-width: 768px) {
+    header nav {
+        display: block;
+
     }
-
-    main {
-        background: url(../images/hero\ image\ boxing.jpg) no-repeat center / cover;
-        height: 500px;
-        width: 100%;
-        margin: 0rem;
-        padding: 0rem;
-    }
-
-    #about {
-        background-color: rgb(40, 40, 40);
-        color: whitesmoke;
-        padding-bottom: 20px;
-    }
-
-    #classes {
-        background-color: black;
-        color: whitesmoke;
-        padding: 0 0;
-
-    }
-
-    footer {
-        font-family: Arial, sans-serif;
-        background-color: rgb(40, 40, 40);
-        color: whitesmoke;
-        width: 100%;
-        height: 100px;
-
-    }
-
-    footer nav {
-
-        color: whitesmoke;
-        text-decoration: none;
-        text-align: center;
-        font-size: 150%;
- }
-
-    @media screen and (min-width: 768px) {
-        header nav {
-            display: block;
-
-        }
-    }
+}
